# regicide

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
actor/: Cargo.toml
actor/src/: action.rs  actor.rs  lib.rs
backend/: Cargo.toml
backend/bindings/: Phase.ts
backend/src/: action.rs  actor.rs  card.rs  deck.rs  error.rs  lib.rs  list.rs  phase.rs  state.rs  tracing_setup.rs  ws.rs
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/db-demo/: page.tsx
frontend/src/app/sse-demo/: page.tsx
frontend/src/app/ws-demo/: page.tsx
frontend/src/bindings/: Card.ts  ClientMsg.ts  JsCard.ts  RegicideAction.ts  ServerMsg.ts  Suit.ts
frontend/src/components/game/: ActionButtons.tsx  EnemyDisplay.tsx  GameBoard.tsx  GameStats.tsx  PhaseIndicator.tsx  PlayerHand.tsx  PlayerList.tsx  ResolvingModal.tsx
frontend/src/components/landing/: ClientTokenInput.tsx  LandingPage.tsx  LobbyBrowser.tsx
frontend/src/components/shared/: Card.tsx  CardBack.tsx  ConnectionStatus.tsx  ReconnectingOverlay.tsx  ValleyBackground.tsx
frontend/src/contexts/: ClientContext.tsx  GameContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useLobbies.ts
frontend/src/lib/: cardUtils.ts  localStorage.ts  parse.ts  validation.ts  websocket.ts
game/: Cargo.toml
game/src/: action.rs  card.rs  deck.rs  lib.rs  msg.rs  phase.rs  state.rs
macros/: Cargo.toml
macros/src/: lib.rs
parse/: Cargo.toml  build.sh
parse/src/: lib.rs
specs/: design-variations.md  implementation-plan.md  milestone-1-ui-ux-design.md  milestone-2-observability-plan.md
src/: main.rs
