[package]
name = "regicide"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["backend", "macros"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
itertools = "0.14.0"
rand = "0.9.2"
kanal = "0.1.1"
tracing = "0.1.41"
thiserror = "2.0.17"
axum = { version = "0.8.7", features = ["macros","ws"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
arrayvec = { version = "0.7.6", features = ["serde"] }
futures-util = "0.3.31"
ts-rs = { version = "11.0.1", features = ["chrono", "chrono-impl", "serde-json-impl", "serde_json", "tokio", "tokio-impl"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
tower-http = { version = "0.6.6", features = ["compression-br", "compression-gzip", "cors", "fs", "trace"] }
hyper = "1.7.0"

[dependencies]
tokio.workspace = true
backend = { path = "backend" }
