[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "../macros" }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
kanal.workspace = true
tracing.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
futures-util.workspace = true
uuid.workspace = true
arrayvec.workspace = true
hyper.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
ts-rs.workspace = true
