[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
rand.workspace = true
kanal.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
axum.workspace = true
futures-util.workspace = true
uuid.workspace = true
arrayvec.workspace = true
hyper.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
ts-rs.workspace = true
tokio.workspace = true
postcard.workspace = true

macros = { path = "../macros" }
game = { path = "../game" }
actor = { path = "../actor" }
